--- a/Ticket_Booking/nbproject/private/private.properties
+++ b/Ticket_Booking/nbproject/private/private.properties
@@ -4,5 +4,7 @@ j2ee.server.domain=/Users/mudithmilinda/GlassFish_Server/glassfish/domains/domai
 j2ee.server.home=/Users/mudithmilinda/GlassFish_Server/glassfish
 j2ee.server.instance=[/Users/mudithmilinda/GlassFish_Server/glassfish:/Users/mudithmilinda/GlassFish_Server/glassfish/domains/domain1]deployer:gfv700ee10:localhost:4848
 j2ee.server.middleware=/Users/mudithmilinda/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
 selected.browser=SL[/Browsers/SafariBrowser
 user.properties.file=/Users/mudithmilinda/Library/Application Support/NetBeans/22/build.properties
